# WinWrappers-WinWrappers

./: CMakeLists.txt  README.md
Code/include/WinWrappers/: ComPtr.h  WinWrappers.h
include/WinWrappers/: ComPtr.h  WinWrappers.h
