cmake_minimum_required(VERSION 3.5.1)
set(module_name WinWrappers)
set(WinWrappers true CACHE BOOL "Wrappers for raw Win32 calls")
if(NOT ${WinWrappers})
    return()
endif()
add_library(${module_name} INTERFACE)
target_include_directories(${module_name} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
